<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">


    <TextView
        android:id="@+id/lblCurrentPlay"
        style="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/now_playing"
        android:textColor="#080707"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPrevious"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/prev" />

        <Button
            android:id="@+id/btnPlay"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/play" />

        <Button
            android:id="@+id/btnNext"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/next" />

        <Button
            android:id="@+id/btnPause"
            style="@style/AppTheme"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/pause"
            android:visibility="gone"
            tools:visibility="gone" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblMiscString"
        style="@style/AppTheme"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/track_path"
        android:textColor="#080707"
        android:textSize="25sp" />


</LinearLayout>